<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectKHEL</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance">Attendance</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="row_date">Date</string>
    <string name="row_location">Location</string>
    <string name="row_coordinator">Coordinators</string>
    <string name="row_beneficiary">Beneficiary</string>
    <string name="row_modules">Modules</string>
    <string name="row_rating">Rating</string>
    <string name="row_modeoftransport">Mode of Transport</string>
    <string name="row_debriefing">Debriefing</string>
    <string name="row_comments">Comments</string>

    <string name="dialog_rating">Rating</string>
    <string name="rating_session_obj">Session\'s Objectives</string>
    <string name="rating_org_obj">Organization\'s Objectives</string>
    <string name="rating_fun_session">Fun session for the kids</string>
    <string name="rating_update">Update</string>

    <string name="nomastersync">Master data missing. Doing Sync..</string>
    <string name="nonetwork">No connection. Check network connectivity</string>
    <string name="nosavedattendances">No saved attendances</string>

    <string name="submit_attendance">Submit Attendance?</string>
    <string name="ask_submit">Do you want to submit the data?</string>
    <string name="submit_confirm">Do you want to submit data?</string>
    <string name="submit_inform">Attendance data submitted</string>
    <string name="offlinesync">Syncing Offline Attendances</string>
    <string name="reset_confirm">Do you want to reset the data?</string>
    <string name="reset_attendance">Reset Attendance?</string>

    <string name="save_confirm">Do you want to save the data?</string>
    <string name="save_attendance">Save Attendance?</string>

    <string name="location_dialog_title">Pick Location</string>
    <string name="coor_dialog_title">Pick Coordinators</string>
    <string name="mod_dialog_title">Pick Modules</string>
    <string name="benef_dialog_title">Pick Beneficiaries</string>
    <string name="benef_location_select">Please select a location first</string>
    <string name="attendance_dialog_title">Pick Attendance</string>

    <string name="comments_title">Enter Comments</string>
    <string name="comments_hint">How did the session go?</string>

    <string name="transport_title">Mode of transport</string>
    <string name="transport_hint"></string>

    <string name="dialog_debrief">Debriefing</string>
    <string name="debrief_1">What worked?</string>
    <string name="debrief_2">What can be improved?</string>
    <string name="debrief_3">What didn\'t work?</string>

    <string name="last_master_sync">Last Master Sync: </string>
    <string name="last_att_sync">Last Attendance Sync: </string>
    <string name="offline_recs">Offline records: </string>

    <string name="missing_data">Ah! You missed some</string>
    <string name="missing_error">field is lonely. Care to add something in there?</string>
    <string name="sync_now">Hang on. I am syncing with Server...</string>
</resources>
